# clinical-data-env

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  env_utils.py  inference.py  models.py  openenv.yaml  pyproject.toml  train_grpo.ipynb
data/: task1_cases.json  task2_cases.json  task3_cases.json  task4_cases.json
data/pharmaverse/: task1_cases.json  task2_cases.json  task3_cases.json  task4_cases.json
docs/: benchmark-summary.md
graders/: __init__.py  grader_task1.py  grader_task2.py  grader_task3.py  grader_task4.py
scripts/: generate_pharmaverse_cases.py  run_local_benchmark.py
server/: Dockerfile  __init__.py  app.py  clinical_data_env_environment.py  requirements.txt
tests/: test_environment.py  test_graders.py  test_inference.py
